sevice.yml
apiVersion: v1
kind: Service
metadata:
  name: application-name
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app
  labels:
    app: application-name
spec:
  ports:
    -  port: 8090
       targetPort: 8090
       protocol: TCP
  selector:
    app: application-name
